--- a/ScriptsAdded.html
+++ b/ScriptsAdded.html
@@ -126,11 +126,11 @@
                 taskInput.value = '';
             }
             const btn = document.getElementById('addBtn');
-            btn.style.backgroundColor = '#ff0000'; // Change button color to red when clicked
+            btn.style.backgroundColor = '#ff0000'; 
         });
 
 
-        
+
     </script>
 
 
