--- a/iwantMOOOREEEdetails.html
+++ b/iwantMOOOREEEdetails.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Deep Space Commander</title>
+    <title>To do commander!</title>
     <style>
         body {
             margin: 0;
@@ -159,7 +159,7 @@
     <div class="rocket ufo">🛸</div>
 
     <div class="todo-container">
-        <h1>STATION LOG</h1>
+        <h1>TO DO SPACE LIST</h1>
         <div class="input-section">
             <input type="text" id="taskInput" placeholder="New task, commander?">
             <button id="addBtn">SEND</button>
