--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                 <input type="text" id="nicknameInput" class="nick-input" placeholder="Name.....">
                 <input type="text" id="commentInput" class="comm-input" placeholder="MESSAGE TO OTHER COMMANDERS....">
             </div>
-            <button id="sendCommentBtn" class="btn-comm">SEND TRANSMISSION</button>
+            <button id="sendCommentBtn" class="btn-comm">SEND MESSAGE</button>
         </div>
     </div>
 
