--- a/index.html
+++ b/index.html
@@ -149,22 +149,22 @@
 
     <div class="main-layout">
         <div class="glass-panel">
-            <h1>STATION LOG</h1>
+            <h1>TO DO LOG</h1>
             <div class="input-row">
-                <input type="text" id="taskInput" class="task-input" placeholder=">> LOCAL TASK">
+                <input type="text" id="taskInput" class="task-input" placeholder=">> WHAT'S THE MISSION COMMANDER?">
                 <button id="addBtn" class="btn-main">ADD</button>
             </div>
             <ul id="taskList"></ul>
         </div>
 
         <div class="glass-panel">
-            <h2 style="font-size: 10px; color: #a855f7; letter-spacing: 3px; margin: 0 0 10px 0;">GLOBAL COMMS</h2>
+            <h2 style="font-size: 10px; color: #a855f7; letter-spacing: 3px; margin: 0 0 10px 0;">COMMUNICATION</h2>
             <div id="commentList" class="comment-box"></div>
             <div class="input-row">
-                <input type="text" id="nicknameInput" class="nick-input" placeholder="CALLSIGN">
+                <input type="text" id="nicknameInput" class="nick-input" placeholder="NAME...">
                 <input type="text" id="commentInput" class="comm-input" placeholder="GLOBAL MESSAGE...">
             </div>
-            <button id="sendCommentBtn" class="btn-comm">BROADCAST SIGNAL</button>
+            <button id="sendCommentBtn" class="btn-comm">SEND SIGNAL</button>
         </div>
     </div>
 
