--- a/index.html
+++ b/index.html
@@ -2,46 +2,68 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Galactic Chat Station</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Galactic Command Center</title>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <style>
-        body { margin: 0; background: radial-gradient(circle at center, #0a1422 0%, #050505 100%); color: #00f2ff; font-family: 'Segoe UI', sans-serif; overflow: hidden; display: flex; justify-content: center; align-items: center; height: 100vh; }
+        :root { --neon: #00f2ff; --pink: #ff00ff; --bg: #050505; }
+        body { margin: 0; background: var(--bg); color: var(--neon); font-family: 'Segoe UI', sans-serif; overflow: hidden; display: flex; height: 100vh; }
         #canvas-bg { position: fixed; top: 0; left: 0; z-index: -1; }
-        .container { background: rgba(10, 25, 41, 0.8); border: 2px solid #00f2ff; box-shadow: 0 0 30px rgba(0, 242, 255, 0.4); padding: 25px; border-radius: 20px; width: 420px; backdrop-filter: blur(12px); z-index: 10; }
-        #chat-box { height: 380px; overflow-y: auto; margin-bottom: 20px; padding-right: 10px; }
-        .msg { margin-bottom: 15px; padding: 10px; background: rgba(0, 242, 255, 0.05); border-left: 3px solid #ff00ff; border-radius: 0 10px 10px 0; }
-        .msg-author { font-size: 0.75em; color: #ff00ff; font-weight: bold; }
-        .msg-time { font-size: 0.65em; color: rgba(255, 255, 255, 0.4); float: right; }
-        .msg-text { color: #fff; margin-top: 5px; }
-        input { width: calc(100% - 24px); background: rgba(0, 0, 0, 0.6); border: 1px solid #00f2ff; color: #fff; padding: 12px; margin-bottom: 12px; border-radius: 8px; outline: none; }
-        button { width: 100%; padding: 12px; background: #00f2ff; color: #000; border: none; border-radius: 8px; cursor: pointer; font-weight: bold; transition: 0.3s; }
-        button:hover { background: #ff00ff; color: #fff; transform: scale(1.02); }
+        .sidebar { width: 300px; background: rgba(10, 25, 41, 0.85); border-right: 2px solid var(--neon); padding: 20px; backdrop-filter: blur(10px); display: flex; flex-direction: column; z-index: 10; }
+        .main-hub { flex-grow: 1; display: flex; justify-content: center; align-items: center; padding: 20px; z-index: 10; }
+        .container { background: rgba(10, 25, 41, 0.8); border: 2px solid var(--neon); box-shadow: 0 0 30px rgba(0, 242, 255, 0.3); padding: 25px; border-radius: 20px; width: 450px; backdrop-filter: blur(12px); }
+        #chat-box { height: 400px; overflow-y: auto; margin-bottom: 15px; padding-right: 10px; scrollbar-width: thin; scrollbar-color: var(--neon) transparent; }
+        .msg { margin-bottom: 12px; padding: 10px; background: rgba(0, 242, 255, 0.05); border-left: 3px solid var(--pink); border-radius: 0 10px 10px 0; animation: slideIn 0.3s ease; }
+        @keyframes slideIn { from { opacity: 0; transform: translateX(-10px); } to { opacity: 1; transform: translateX(0); } }
+        .msg-author { font-size: 0.75em; color: var(--pink); font-weight: bold; }
+        .msg-text { color: #fff; margin-top: 4px; word-wrap: break-word; }
+        .todo-section { margin-top: 20px; }
+        .todo-item { background: rgba(255, 255, 255, 0.05); padding: 8px; margin: 5px 0; border-radius: 4px; display: flex; justify-content: space-between; font-size: 0.9em; border-left: 2px solid var(--neon); }
+        input { width: calc(100% - 24px); background: rgba(0, 0, 0, 0.6); border: 1px solid var(--neon); color: #fff; padding: 12px; margin-bottom: 10px; border-radius: 8px; outline: none; }
+        button { width: 100%; padding: 12px; background: var(--neon); color: #000; border: none; border-radius: 8px; cursor: pointer; font-weight: bold; text-transform: uppercase; transition: 0.3s; }
+        button:hover { background: var(--pink); color: #fff; box-shadow: 0 0 15px var(--pink); }
         .hidden { display: none; }
-        .secondary-btn { background: transparent; color: #00f2ff; border: 1px solid #00f2ff; margin-top: 10px; }
+        .secondary-btn { background: transparent; color: var(--neon); border: 1px solid var(--neon); margin-top: 10px; }
     </style>
 </head>
 <body>
 <canvas id="canvas-bg"></canvas>
-<div class="container">
-    <div id="auth-screen">
-        <h2 style="text-align: center; letter-spacing: 2px;">STATION LOGIN</h2>
-        <input type="email" id="email" placeholder="Email">
-        <input type="password" id="password" placeholder="Pass (min 6 chars)">
-        <button onclick="handleSignIn()">ENTER</button>
-        <button onclick="handleSignUp()" class="secondary-btn">REGISTER NEW PILOT</button>
+<div class="sidebar">
+    <h3 style="letter-spacing: 2px; text-shadow: 0 0 10px var(--neon);">COMMANDER LOGS</h3>
+    <div class="todo-section">
+        <input type="text" id="todo-input" placeholder="New mission..." style="padding: 8px; width: 85%;">
+        <div id="todo-list">
+            <div class="todo-item"><span>Check fuel cells</span><span>✓</span></div>
+            <div class="todo-item"><span>Scan Sector 7G</span><span>!</span></div>
+        </div>
     </div>
-    <div id="chat-screen" class="hidden">
-        <div id="chat-box"></div>
-        <input type="text" id="msg-input" placeholder="Transmit message...">
-        <button onclick="sendMessage()">SEND</button>
-        <button onclick="handleSignOut()" style="margin-top:10px; background:#ff4d4d; color:white;">LOGOUT</button>
+    <div style="margin-top: auto; font-size: 0.8em; opacity: 0.7;">
+        SYSTEM: ONLINE<br>
+        OXYGEN: 98%<br>
+        COORDINATES: 42.000, -1.337
+    </div>
+</div>
+<div class="main-hub">
+    <div class="container">
+        <div id="auth-screen">
+            <h2 style="text-align: center; letter-spacing: 3px;">GATEWAY ACCESS</h2>
+            <input type="email" id="email" placeholder="Email">
+            <input type="password" id="password" placeholder="Pass (min 6)">
+            <button onclick="handleSignIn()">ENTER</button>
+            <button onclick="handleSignUp()" class="secondary-btn">REGISTER</button>
+        </div>
+        <div id="chat-screen" class="hidden">
+            <div id="chat-box"></div>
+            <input type="text" id="msg-input" placeholder="Transmit...">
+            <button onclick="sendMessage()">SEND</button>
+            <button onclick="handleSignOut()" style="margin-top:10px; background:#ff4d4d; color:white; font-size: 0.7em;">LOGOUT</button>
+        </div>
     </div>
 </div>
 <script>
     const URL = 'https://ebjsxlympwocluxgmwcu.supabase.co';
     const KEY = 'sb_publishable_8HhPj3Y8g5V7Np8Vy5xbzQ_2B7LjTkj';
     const sb = window.supabase.createClient(URL, KEY);
-
     const authScreen = document.getElementById('auth-screen');
     const chatScreen = document.getElementById('chat-screen');
     const chatBox = document.getElementById('chat-box');
@@ -62,7 +84,7 @@
         const e = document.getElementById('email').value;
         const p = document.getElementById('password').value;
         const { error } = await sb.auth.signUp({ email: e, password: p });
-        if (error) alert(error.message); else alert("Pilot Registered!");
+        if (error) alert(error.message); else alert("Success!");
     }
 
     async function handleSignIn() {
@@ -85,7 +107,9 @@
         const div = document.createElement('div');
         div.className = 'msg';
         const time = new Date(msg.created_at).toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' });
-        div.innerHTML = `<span class="msg-time">${time}</span><span class="msg-author">🚀 ${msg.nickname || 'Pilot'}</span><div class="msg-text">${msg.message}</div>`;
+        div.innerHTML = `<span style="float:right; font-size:0.6em; opacity:0.5;">${time}</span>
+                         <span class="msg-author">🚀 ${msg.nickname || 'Pilot'}</span>
+                         <div class="msg-text">${msg.message}</div>`;
         chatBox.appendChild(div);
         scrollToBottom();
     }
@@ -108,19 +132,53 @@
 
     const canvas = document.getElementById('canvas-bg');
     const ctx = canvas.getContext('2d');
-    let stars = [];
+    let stars = [], asteroids = [], planets = [];
+    let ufo = { x: -100, y: 150, speed: 1.5 };
+
     function resize() { canvas.width = window.innerWidth; canvas.height = window.innerHeight; }
     window.onresize = resize; resize();
-    for(let i=0; i<200; i++) stars.push({ x: Math.random()*canvas.width, y: Math.random()*canvas.height, r: Math.random()*2, d: Math.random()*0.5 });
+
+    for(let i=0; i<500; i++) {
+        stars.push({ x: Math.random()*canvas.width, y: Math.random()*canvas.height, r: Math.random() < 0.1 ? Math.random()*3 + 1.5 : Math.random()*1.2, o: Math.random(), s: Math.random()*0.015 });
+    }
+    for(let i=0; i<8; i++) {
+        asteroids.push({ x: Math.random()*canvas.width, y: Math.random()*canvas.height, r: Math.random()*2 + 1, vx: Math.random()*0.5 - 0.25, vy: Math.random()*1 + 0.5 });
+    }
+    planets.push({ x: canvas.width*0.85, y: canvas.height*0.15, r: 70, col: '#ff3366' });
+    planets.push({ x: canvas.width*0.15, y: canvas.height*0.8, r: 50, col: '#4422ff' });
+
     function draw() {
         ctx.fillStyle = '#050505'; ctx.fillRect(0,0,canvas.width, canvas.height);
         stars.forEach(s => {
-            ctx.beginPath(); ctx.fillStyle = "white"; ctx.arc(s.x, s.y, s.r, 0, Math.PI*2); ctx.fill();
-            s.y += s.d; if(s.y > canvas.height) s.y = -10;
+            s.o += s.s; if(s.o > 1 || s.o < 0) s.s *= -1;
+            ctx.beginPath(); ctx.fillStyle = `rgba(255, 255, 255, ${s.o})`; ctx.arc(s.x, s.y, s.r, 0, Math.PI*2); ctx.fill();
         });
+        planets.forEach(p => {
+            let grad = ctx.createRadialGradient(p.x, p.y, p.r*0.1, p.x, p.y, p.r);
+            grad.addColorStop(0, p.col); grad.addColorStop(1, '#000');
+            ctx.fillStyle = grad; ctx.beginPath(); ctx.arc(p.x, p.y, p.r, 0, Math.PI*2); ctx.fill();
+        });
+        ctx.fillStyle = "#aaa";
+        asteroids.forEach(a => {
+            a.x += a.vx; a.y += a.vy; if(a.y > canvas.height) a.y = -20;
+            ctx.beginPath(); ctx.arc(a.x, a.y, a.r, 0, Math.PI*2); ctx.fill();
+        });
+        ufo.x += ufo.speed; if(ufo.x > canvas.width + 200) ufo.x = -200;
+        ctx.fillStyle = "#ff00ff"; ctx.fillRect(ufo.x, ufo.y, 25, 6);
+        ctx.beginPath(); ctx.arc(ufo.x+12, ufo.y-4, 6, 0, Math.PI*2); ctx.fill();
         requestAnimationFrame(draw);
     }
     draw();
+
+    document.getElementById('todo-input').addEventListener('keypress', (e) => {
+        if(e.key === 'Enter' && e.target.value) {
+            const div = document.createElement('div');
+            div.className = 'todo-item';
+            div.innerHTML = `<span>${e.target.value}</span><span>!</span>`;
+            document.getElementById('todo-list').prepend(div);
+            e.target.value = '';
+        }
+    });
 </script>
 </body>
 </html>
